--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -29,5 +29,8 @@ jobs:
       - name: Attach releases created
         uses: softprops/action-gh-release@v2
         with:
+          body: |
+            # New Release of watchbee for VMIX
+            sha256 : ${{ github.sha }}
           files: dist/watchbeeforvmix.exe
 
