Include github sha inside body of release

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -33,4 +33,5 @@ jobs:
             # New Release of watchbee for VMIX
             sha256 : ${{ github.sha }}
           files: dist/watchbeeforvmix.exe
+          tag_name: ${{ github.sha }}
 
