Ensure github tmp token is added to create release

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -34,4 +34,5 @@ jobs:
             sha256 : ${{ github.sha }}
           files: dist/watchbeeforvmix.exe
           tag_name: ${{ github.sha }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
