On all main branch pushes, test release if a tag is used

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -2,10 +2,8 @@
 name: Build and publish WatchBee
 on:
   push:
-    branches: [ "release" ]
-  pull_request:
-    branches: [ "main" ]
-
+    tags:
+      - "v*.*.*"
 jobs:
   build-and-publish-watchbee:
     name: Build and publish WatchBee
