Changed destination of windows build

--- a/.github/workflows/build-windows-image.yml
+++ b/.github/workflows/build-windows-image.yml
@@ -39,6 +39,6 @@ jobs:
           #   sha256 : ${{ github.sha }}
           files: |
             Release.txt
-            dist/watchbeeforvmixWin
+            dist\watchbeeforvmixWin.exe
           token: ${{ secrets.GITHUB_TOKEN }}
 
