--- a/.github/workflows/build-windows-image.yml
+++ b/.github/workflows/build-windows-image.yml
@@ -5,8 +5,8 @@ on:
     tags:
       - "windows*.*.*"
 jobs:
-  build-and-publish-watchbee:
-    name: Build and publish WatchBee
+build-and-test:
+    name: Build and test using node tests
     runs-on: windows-latest
     permissions:
       contents: write
@@ -23,6 +23,22 @@ jobs:
 
       - run: npm run test:run
         name: Test npm using test suite
+
+  build-and-publish-watchbee:
+    name: Build and publish WatchBee
+    runs-on: windows-latest
+    permissions:
+      contents: write
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - run: npm ci
+        name: Install dependencies
 
       - run: npm run build:win
         name: Build release for windows
