--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "bin": "index.js",
   "scripts": {
     "build:win": "npx nexe index.js -t windows-22.21.1 --output=dist/watchbeeforvmixWin -r node_modules/**/* --input=package.json --python=/usr/bin/python3 --build",
-    "build:linux": "nexe index.js --target linux-x64-14.15.3 --output=dist/watchbeeforvmixLin -r node_modules/**/* --input=package.json",
-    "build:mac": "nexe index.js --target alpine-x64-12.9.1 --output=dist/watchbeeforvmixMac -r node_modules/**/* --input=package.json",
-    "build:mac2": "nexe index.js -t windows-22.21.1 --output=dist/watchbeeforvmixMac -r node_modules/**/* --input=package.json --python=/usr/bin/python3 --build",
+    "build:linux": "npx nexe index.js --target linux-x64-22.21.1 --output=dist/watchbeeforvmixLin -r node_modules/**/* --input=package.json --python=/usr/bin/python3 --build",
+    "build:mac": "npx nexe index.js -t alpine-22.21.1 --output=dist/watchbeeforvmixMac -r node_modules/**/* --input=package.json --python=/usr/bin/python3 --build",
     "test": "vitest",
     "test:run": "vitest run",
     "test:watch": "vitest watch"
