CBP-146 Changed syntax for including the file in actions

--- a/.github/workflows/build-windows-image.yml
+++ b/.github/workflows/build-windows-image.yml
@@ -54,5 +54,5 @@ jobs:
           #   sha256 : ${{ github.sha }}
           files: |
             Release.txt
-            dist\watchbeeforvmixWin.exe
+            dist/watchbeeforvmixWin.exe
           token: ${{ secrets.GITHUB_TOKEN }}
