--- a/.github/workflows/build-windows-image.yml
+++ b/.github/workflows/build-windows-image.yml
@@ -29,6 +29,7 @@ jobs:
     permissions:
       contents: write
       packages: write
+    needs: build-and-test
     steps:
       - uses: actions/checkout@v4
 
