Updated windows build to pull from node dist and workflow to push all dist artifacts to release

--- a/.github/workflows/build-windows-image.yml
+++ b/.github/workflows/build-windows-image.yml
@@ -55,5 +55,5 @@ jobs:
           #   sha256 : ${{ github.sha }}
           files: |
             Release.txt
-            dist/watchbeeforvmixWin.exe
+            dist/**
           token: ${{ secrets.GITHUB_TOKEN }}
