--- a/.github/workflows/build-windows-image.yml
+++ b/.github/workflows/build-windows-image.yml
@@ -2,7 +2,7 @@ name: Build a windows release on new tag
 on:
   create:
     tags:
-      - "windows*.*.*"
+      - "windows-[0-9].[0-9]"
 jobs:
   build-and-test:
     name: Build and test using node tests
