--- a/.github/workflows/build-windows-sea.yml
+++ b/.github/workflows/build-windows-sea.yml
@@ -2,7 +2,7 @@ name: Build a windows release using sea
 on:
   create:
     tags:
-      - "sea*.*.*"
+      - 'sea-[0-9].[0-9]'
 jobs:
   build-and-test:
     name: Build and test using node tests
