Ensure to include base dir index.exe

--- a/.github/workflows/build-windows-sea.yml
+++ b/.github/workflows/build-windows-sea.yml
@@ -59,4 +59,5 @@ jobs:
           #   sha256 : ${{ github.sha }}
           files: |
             dist/index.exe
+            index.exe
           token: ${{ secrets.GITHUB_TOKEN }}
