--- a/.github/workflows/build-windows-sea.yml
+++ b/.github/workflows/build-windows-sea.yml
@@ -4,8 +4,35 @@ on:
     tags:
       - 'sea-[0-9].[0-9]'
 jobs:
+  test-on-linux-and-upload-modules:
+    name: Run tests on ubuntu box and upload node modules
+    runs-on: ubuntu-slim
+    permissions:
+      contents: write
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - run: npm ci
+        name: Install dependencies
+
+      - run: npm run test:run
+        name: Test npm using test suite
+
+      - uses: montudor/action-zip@v1
+        with:
+          args: zip -qq -r modules.zip node_modules
+        
+      - uses: actions/upload-artifact@v2
+        with:
+          name: modules.zip
+
   build-and-test:
-    name: Build and test using node tests
+    name: Build and test using node tests on a windows image
     runs-on: windows-latest
     permissions:
       contents: write
@@ -48,7 +75,11 @@ jobs:
 
       - name: Inject blob into node copy
         run: |
-          npx postject index.exe NODE_SEA_BLOB dist/node.blob --sentinel-fuse NODE_SEA_FUSE_fce680ab2cc467b6e072b8b5df1996b2 
+          npx postject watchbee.exe NODE_SEA_BLOB dist/node.blob --sentinel-fuse NODE_SEA_FUSE_fce680ab2cc467b6e072b8b5df1996b2 
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: modules.zip
 
       - name: Attach releases created
         uses: softprops/action-gh-release@v2
@@ -58,6 +89,6 @@ jobs:
           #   # New Release of watchbee for VMIX
           #   sha256 : ${{ github.sha }}
           files: |
-            dist/index.exe
-            index.exe
+            watchbee.exe
+            modules.zip
           token: ${{ secrets.GITHUB_TOKEN }}
