Corrected wrongly named matrix vm

--- a/.github/workflows/build-windows-sea.yml
+++ b/.github/workflows/build-windows-sea.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        run_on: [ubunut-slim, windows-latest]
+        run_on: [ubuntu-slim, windows-latest]
     name: Run tests on ubuntu and windows
     runs-on: ${{ matrix.run_on }}
     permissions:
